--- a/.github/workflows/deployGHPages.yml
+++ b/.github/workflows/deployGHPages.yml
@@ -1,8 +1,8 @@
-name: Deploy GH Pages 
+name: Deploy GH Pages
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Install dependencies
         run: npm i
