--- a/.github/workflows/deployGHPages.yml
+++ b/.github/workflows/deployGHPages.yml
@@ -22,6 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
 
       - name: Lint
         run: npm run lint
@@ -31,6 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
 
       - name: Test
         run: npm run test
@@ -40,6 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
 
       - name: Deploy Github Pages
         run: |
