--- a/.github/workflows/deployGHPages.yml
+++ b/.github/workflows/deployGHPages.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+        with:
+          cache: "npm"
 
       - name: Install dependencies
         run: npm i
@@ -23,6 +25,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+        with:
+          cache: "npm"
 
       - name: Lint
         run: npm run lint
@@ -32,7 +36,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
 
       - name: Test
         run: npm run test
@@ -43,6 +46,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v2
+        with:
+          cache: "npm"
 
       - name: Deploy Github Pages
         run: |
