--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@babel/eslint-parser": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.0",
     "eslint": "^8.1.0",
@@ -30,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.2.1-alpha-327d5c484-20211106",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.3.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
@@ -37,6 +40,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
