--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack serve --mode=development --open",
     "build": "webpack",
     "lint": "eslint --ext .jsx,.js src",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest ",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -19,8 +19,11 @@
     "@babel/eslint-parser": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@testing-library/dom": "^8.11.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.0",
     "eslint": "^8.1.0",
