--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
+    "prettier": "^2.4.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
